--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodules/riscv-isa-data"]
-	path = submodules/riscv-isa-data
-	url = https://github.com/five-embeddev/riscv-isa-data.git
+[submodule "submodules/riscv-opcodes"]
+	path = submodules/riscv-opcodes
+	url = https://github.com/riscv/riscv-opcodes.git
