--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/riscv-opcodes"]
 	path = submodules/riscv-opcodes
 	url = https://github.com/riscv/riscv-opcodes.git
+[submodule "submodules/riscv-formal"]
+	path = submodules/riscv-formal
+	url = https://github.com/SymbioticEDA/riscv-formal.git
